# ai-stock-analyzer

./: .gitignore  CHANGELOG.md  README.md  nixpacks.toml  railway.json  requirements.txt  signal_logic.py  trading.py  universe.py
.devcontainer/: devcontainer.json
desktop/: .env.example  README.md  start.sh
desktop/backend/: .env.example  LOCAL_HOSTING.md  auth.py  autopilot_config.json  backtest.py  engine.py  requirements.txt  run-local-ngrok.sh  run-local.sh  server.py  start.sh  trading.py  validation.py
desktop/backend/tests/: _trading_harness.py  run_all.py  test_auth_reset.py  test_backtest.py  test_price_math.py  test_router.py  test_signal_logic.py
desktop/frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
desktop/frontend/public/: animations.jsx  commercial.html  login-concepts.html  rail-mockup.html  shell-concepts.html  style-gallery.html  welcome-concepts.html
desktop/frontend/src/: App.css  App.jsx  AuthPage.jsx  Chart.jsx  Settings.jsx  main.jsx  sounds.js
desktop/frontend/src-tauri/: Cargo.toml  tauri.conf.json
desktop/frontend/src-tauri/icons/: icon.icns
desktop/src-tauri/: tauri.conf.json
